--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
- "name": "ac-selector",
- "version": "2.2.4",
+ "name": "ac-selector-new-modal",
+ "version": "1.0.0",
  "description": "选人组件",
  "keywords": [
   "react",
@@ -29,7 +29,7 @@
   "bee-checkbox": "2.0.9",
   "bee-icon": "1.0.11",
   "bee-menus": "2.0.11",
-  "bee-modal": "2.1.2",
+  "bee-modal": "2.1.15",
   "bee-pagination": "2.0.12",
   "bee-table": "2.1.3",
   "bee-tabs": "2.0.6",
